--- a/Gymbokning 2/Views/GymClasses/Details.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Details.cshtml
@@ -40,7 +40,7 @@
         @foreach (var item in Model.AttendingMembers)
         {
             <dd>
-                @Html.DisplayFor(modelitem => item.ApplicationUser.Email)
+                @Html.DisplayFor(modelitem => item.ApplicationUser.FullName)
                 
             </dd>
           
