--- a/Gymbokning 2/Views/GymClasses/Index.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<Gymbokning_2.Models.GymClass>
+﻿@using Gymbokning_2.Models.ViewModels
+
+@model IEnumerable<GymClassesViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -16,7 +18,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartTime)
+                @Html.DisplayNameFor(model => model.StartDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Duration)
@@ -34,15 +36,15 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.StartTime)
+                @Html.DisplayFor(modelItem => item.StartDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Duration)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                    @Html.DisplayFor(modelItem => item.Description)
             </td>
-
+                
                
                     <td>
                   @if (User.Identity.IsAuthenticated)
@@ -51,17 +53,23 @@
                     
                         <a asp-action="BookingToggle" asp-route-id = "@item.Id" > BookingToggle </a > <span> | </span>}
 
-                     @if (User.IsInRole("Admin")){
+                   
+                    
 
+
+
+                     @if (User.IsInRole("Admin")){
+                    
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>}
+
+
                
-               
+                    
+                        
 
-                
 
-
-                
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
 
 
             </td>
