--- a/Gymbokning 2/Views/GymClasses/Index.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Index.cshtml
@@ -30,40 +30,53 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-            </td>
-                
-               
+        @foreach (var item in Model) 
+        {
+            @if (item.StartDate > DateTime.Now)
+            {
+                <tr>
                     <td>
-                  @if (User.Identity.IsAuthenticated)
-                    {
-                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> <span> | </span>
-                    
-                       @if(item.Attending) {<a asp-action="BookingToggle" asp-route-id = "@item.Id" > Cansel </a > <span> | </span>}
-                        @if(!item.Attending) {<a asp-action="BookingToggle" asp-route-id = "@item.Id" > Book </a > <span> | </span>}
-                    }
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StartDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Duration)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
 
-                   
-                    
+
+                    <td>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> <span> | </span>
+
+                            @if (item.Attending)
+                            {
+                                <a asp-action="BookingToggle" asp-route-id = "@item.Id" > Cansel </a > 
+                                <span> | </span>
+                            }
+                            @if (!item.Attending)
+                            {
+                                <a asp-action="BookingToggle" asp-route-id = "@item.Id" > Book </a > 
+                                <span> | </span>
+                            }
+                        }
 
 
 
-                     @if (User.IsInRole("Admin")){
-                    
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>}
+
+
+
+                        @if (User.IsInRole("Admin"))
+                        {
+
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        }
 
 
                
@@ -71,11 +84,13 @@
                         
 
 
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
 
 
-            </td>
-        </tr>
-}
+                        
+                    </td>
+                </tr>
+            }
+        }       
     </tbody>
 </table>
