--- a/Gymbokning 2/Views/GymClasses/Create.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Gympass</h1>
 
 <h4>GymClass</h4>
 <hr />
@@ -40,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List of Gympasses </a>
 </div>
 
 @section Scripts {
