--- a/Gymbokning 2/Views/GymClasses/Edit.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Gympass</h1>
 
 <h4>GymClass</h4>
 <hr />
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List of Gympasses</a>
 </div>
 
 @section Scripts {
