--- a/Gymbokning 2/Views/GymClasses/Index.cshtml
+++ b/Gymbokning 2/Views/GymClasses/Index.cshtml
@@ -6,10 +6,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Gympass</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Gympass</a>
 </p>
 <table class="table">
     <thead>
@@ -74,8 +74,8 @@
                         @if (User.IsInRole("Admin"))
                         {
 
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit Gympass</a> <span> | </span>
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete Gympass</a>
                         }
 
 
@@ -84,7 +84,7 @@
                         
 
 
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> <span> | </span>
+                         @*   <a asp-action="Edit" asp-route-id="@item.Id">Edit Gympass</a> <span> | </span>*@
 
 
                         
