--- a/Gymbokning 2/Views/Shared/_Layout.cshtml
+++ b/Gymbokning 2/Views/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="GymClasses" asp-action="Coming">Coming Clases</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="GymClasses" asp-action="History">History</a>
+                            </li>
+                        }
+
+
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
